# code

./: README.md  headerfiles.7z
1970.1.1/: A.cpp  A_1.in  Usaco-A.cpp  user.scm
2019.12.16/: gymnastics.cpp  lineup.cpp  meetings.cpp  milkvisits.cpp  moobuzz.cpp  whereami.cpp
2020-7-19-cf/: A.cpp  C.cpp  CMakeLists.txt
2020.1.12/: 1.out.txt  T1  T1-spj  T1-spj.cpp  T1.cpp  T2  T2.cpp  T3  T3.cpp
2020.1.13/: T1  T1.cpp  T2  T2.cpp  T3  T3.cpp  main  main.cpp  test5.in
2020.1.14/: T1  T1.cpp  T2  T2.cpp  T3  T3.cpp
2020.1.15/: T1-swift-PC  T1.cpp  T2-std.cpp  T2-swift-PC  T2.cpp  T2.exp  T2.lib
2020.1.16/: 2.out  2.wa.out  baoLiChuQiJi  baoLiChuQiJi.cpp  main  main.cpp
2020.1.17/: T1  T1.cpp  T2-swift-PC  T2.cpp  T3.cpp
2020.1.18/: vector_test  vector_test.cpp
2020.1.19/: T1  T1-spj  T1-spj.cpp  T1.cpp  T1.out  T1.wa  T1.wa.cpp  T2  T2.cpp  T3  T3.cpp  main  main.cpp  pet1.ac.out  pet1.out.ac  pet1.out.wa  std  std.cpp
2020.1.20/: T1  T1.cpp  T2  T2-baoLi  T2-baoLi.cpp  T2-dataMaker  T2-dataMaker.cpp  T2-wa  T2-wa.cpp  T2.ans  T2.cpp  T2.in  T2.out  T3  T3.cpp  main  main.cpp
2020.1.21/: T1  T1-baoli  T1-baoli.cpp  T1-dataMaker  T1-dataMaker.cpp  T1-swift-PC.cpp  T1.cpp  T1.in  T2  T2.cpp  T3  T3.cpp  main  main.cpp
2020.10.13/: A-baoli.cpp  A.cpp  B.cpp  C.cpp  dm.cpp  in.ans  in.txt  my.txt  out.txt  test.md
2020.10.17/: A.cpp  B.cpp  C.cpp  test.sql
2020.10.20/: A.cpp  AA.cpp  B.cpp
2020.10.24/: A.cpp  B.cpp  C.cpp  tempCodeRunnerFile.cpp
2020.10.24-cf/: A  A.cpp  B.cpp  C.cpp  D  D.cpp  D.exp  tempCodeRunnerFile.cpp
2020.10.3/: 3246-0.cpp  A-baoli.cpp  A.cpp  B.cpp  C.cpp  dm.cpp  in.txt  tempCodeRunnerFile.cpp
2020.10.3-contest/: C.cpp  main.cpp  name.cpp  name.error.txt  name.z
2020.10.4/: 3212-4.cpp
2020.10.4-contest/: A.cpp  AA.cpp
2020.10.6/: 3249-1.cpp  3258-0.cpp
2020.10.6-contest/: A.cpp  AA.cpp
2020.10.7/: A.cpp  C.cpp
2020.10.7-contest/: B-dm.cpp  B.ans  B.in  ex_yygq2.in
2020.10.8/: A.cpp  B.cpp
2020.11.14/: A.cpp  B.cpp  C.cpp  ss.txt  tmp  tmp.cpp  worry.in  worry.txt
2020.11.21/: garph.cpp  graph.baoli.txt  graph.out  graph.txt  magic.cpp  magic.in  magic.out  magic.txt  magin.txt  merge  merge.cpp  merge11.in  merge13.in  number.cpp
2020.11.22/: 8.in  8.txt  ant.cpp  fibonotci.cpp  main.cpp  parking.cpp  party.cpp  test.cpp  test.html
2020.11.23/: alchemy.cpp  alchemy1.in  alchemy1.out  alchemy1.txt  alchemy2.in  alchemy2.out  change.cpp  easy.cpp  easy1.in  easy2.in  easy2.out  main.cpp  playingcard.cpp  playingcard1.in  playingcard2.in  playingcard3.txt  test.ce  test_run.cpp
2020.11.24/: 3407-2.cpp  AT3277.cpp  CF480E.cpp  ans.c  bin1.in  bin1.out  bin10.out  bin2.in  bin2.out  bin3.in  bin3.out  bin4.in  bin4.out  bin5.in  bin5.out  bin6.in  bin6.out  bin7.txt  bin8.out  bin9.out  bin9.txt  change2.in  change2.out  db.cpp  sdsdds.cpp  stack.cpp  tree.cpp
2020.11.25/: Untitled-1.cpp  dequexlis.cpp  dequexlis.in  disquz.cpp  diswri.cpp  jimu.cpp  maxksum.cpp  maxksum.in  maxksum.txt  maxpsum.cpp  share.txt  test.cpp
2020.11.26/: C-std.cpp  checker.cpp  clash.cpp  clash.in  clash.out  dm.cpp  easy.cpp  easy.out  easys.cpp  esay.in  laotui.ans  laotui.cpp  laotui.in  laotui.out  mc.cpp  mc.txt  mc2.fixed.txt  mc2.test.txt  mc2.txt  sample0.out  sample1.ans  sample1.in  std.cpp  tempCodeRunnerFile.cpp  tstdsda.cpp
2020.11.27/: colour-dm.cpp  colour.cpp  colour.in  colour.out  garbage1.cpp  match.cpp  plus-baoli.cpp  plus.biao  plus.cpp  plus.in  plus.txt  snake.cpp  std.cpp
2020.11.28/: gokami-dm.cpp  gokami.cpp  gokami.in  gokami.out  lizard.cpp  news.cpp  news.in  number.cpp
2020.11.28-luogu/: B.cpp  CC.cpp
2020.11.29/: A.cpp  B.cpp  C.cpp  DD.cpp  E.cpp
2020.11.29-cf/: aSDASD.cpp
2020.11.3/: A.cpp
2020.11.30/: beetle.cpp  beetle2.in  beetle2.out  candy-fix..cpp  candy.cpp  candy.out  candy.txt  candy2.in  candy2.out  candy2.txt  cf1415D.cpp  cf1415D.ilk  data4-11.in  data4-11.out  data4-11.txt  data9-10.in  data9-10.out  data9-10.txt  elections.cpp  elections2.out  fhq.cpp  fhq.ilk  gloves.cpp  gloves.out  gloves.txt  spj_cqbz.cpp  test.cpp
2020.12.1/: ASDSAD.ilk  C.md  a.ans  a.in  circle.cpp  dm  gift.cpp  gift.ilk  gift2.in  gift2.out  gift3.txt  gift_sample2.in  gift_sample2.out  lxn.cpp  rank.cpp  ssDS.cpp  ssDS.ilk  tmp.cpp  tree1.in  tree1.out  tree1.txt  tree2.in  tree2.out  trees.cpp  trees.ilk  一句话题意.txt
2020.4.13/: 2890-1.cpp  2890-2.cpp  2890-A-dataMaker.cpp  CMakeLists.txt
2020.6.26/: CMakeLists.txt  T1.cpp  T2.cpp  T3.cpp  T4.cpp  T5.cpp  T6.cpp  T7.cpp  lct.cpp
2020.6.27/: CMakeLists.txt  P1368.cpp  T1.cpp  T2.cpp  T3.cpp  T4.cpp  T5.cpp  T6.cpp  T7.cpp  spj.cpp
2020.6.9/: 4276.cpp  4277.cpp  4278.cpp  4279.cpp  CMakeLists.txt  first.cpp  main.cpp  second.cpp  third.cpp
2020.7.18/: CMakeLists.txt  P3812.cpp  P4219_6.out  T1.cpp  T2.cpp  T3.cpp  fhqtreap.cpp  std.cpp
2020.7.19/: CMakeLists.txt  T1.cpp  T2.cpp  T3.cpp  dataMaker.cpp  hack.cpp  std.cpp
2020.7.20/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  Sp7739.cpp  dp.cpp  exsam.cpp  fhq.cpp  sam.cpp
2020.7.22/: A.cpp  B-dm.cpp  B-zyy.cpp  B.cpp  C.cpp  CMakeLists.txt  P2387.cpp  dinic.cpp
2020.7.23/: CMakeLists.txt  P2495.cpp  P4602.cpp  P5090.cpp  a.out  candy.cpp  carry.cpp  dfz.cpp  power.cpp
2020.7.30/: 2708-3.cpp  2708-7.cpp  A.cpp  B.cpp  C.cpp  CMakeLists.txt  P2261.cpp  P2303.cpp  P4768.cpp
2020.7.31/: 2714-2.cpp  2716-3.cpp  CMakeLists.txt  P2168.cpp  P3224.cpp  P3973.cpp  P5043.cpp
2020.8.1/: 2720-13.cpp  8991.cpp  A.cpp  B-baoli.cpp  B-dm.cpp  B.cpp  C.cpp  CC.cpp  CMakeLists.txt
2020.8.10/: 2710-4.cpp  2710-8.cpp  2714-1.cpp  CMakeLists.txt  P2801.cpp  P3388-std.cpp  P3388.cpp  P4432.cpp
2020.8.11/: 2710-1  2710-1.cpp  A-dm.cpp  A.cpp  B-dm.cpp  B.cpp  BB.cpp  C.cpp  CMakeLists.txt
2020.8.2/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp  F.cpp  P3857.cpp  P4859.cpp
2020.8.7/: A.cpp  A.java  B.cpp  CMakeLists.txt  P2257.cpp  T1.cpp  T2.cpp  T3-baoli.cpp  T3-dm.cpp  T3.cpp  T4.cpp
other/NOI online R2/: CMakeLists.txt  match.cpp  sequence-datamaker.cpp  sequence.cpp
(+1741 files in other folders)
