cmake_minimum_required(VERSION 3.16)
project(2020_4_13)

set(CMAKE_CXX_STANDARD 14)


add_executable(test cmake-build-debug/test.cpp)
add_executable(testt cmake-build-debug/testt.cpp)
add_executable(2719-4 cmake-build-debug/2719-4.cpp)
add_executable(2718-1 cmake-build-debug/2718-1.cpp)
add_executable(2716-3 cmake-build-debug/2716-3.cpp)
add_executable(2890-0 cmake-build-debug/2890-0.cpp)
add_executable(2890-1 2890-1.cpp)
add_executable(2890-3 cmake-build-debug/2890-3.cpp)
add_executable(2890-A-dataMaker 2890-A-dataMaker.cpp)
add_executable(2890-2 2890-2.cpp)
add_executable(sequence cmake-build-debug/sequence.cpp)
add_executable(debug cmake-build-debug/debug.cpp)