cmake_minimum_required(VERSION 3.16)
project(2020_6_26)

set(CMAKE_CXX_STANDARD 14)

add_executable(2020_6_26 T1.cpp)
add_executable(T2 T2.cpp)
add_executable(T1 T1.cpp)
add_executable(T3 T3.cpp)
add_executable(T4 T4.cpp)
add_executable(T7 T7.cpp)
add_executable(T5 T5.cpp)
add_executable(T6 T6.cpp)
add_executable(lct lct.cpp)