cmake_minimum_required(VERSION 3.16)
project(2020_7_18)

set(CMAKE_CXX_STANDARD 14)

add_executable(2020_7_18 main.cpp)
add_executable(main main.cpp)
add_executable(T1 T1.cpp)
add_executable(T2 T2.cpp)
add_executable(T3 T3.cpp)
add_executable(P3812 P3812.cpp)
add_executable(fhqtreap fhqtreap.cpp)
add_executable(std std.cpp)