cmake_minimum_required(VERSION 3.16)
project(2020_7_19)

set(CMAKE_CXX_STANDARD 14)

add_executable(2020_7_19 main.cpp)
add_executable(main main.cpp)
add_executable(T1 T1.cpp)
add_executable(T3 T3.cpp)
add_executable(T2 T2.cpp)
add_executable(hack hack.cpp)
add_executable(dataMaker dataMaker.cpp)
add_executable(std std.cpp)
add_executable(fhq cmake-build-debug/fhq.cpp)