cmake_minimum_required(VERSION 3.16)
project(2020_7_20)

set(CMAKE_CXX_STANDARD 11)

add_executable(dp dp.cpp)
add_executable(A A.cpp)
add_executable(B B.cpp)
add_executable(C C.cpp)
add_executable(Sp7739 Sp7739.cpp)
add_executable(sam sam.cpp)
add_executable(exsam exsam.cpp)
add_executable(fhq fhq.cpp)