cmake_minimum_required(VERSION 3.16)
project(2020_7_22)

set(CMAKE_CXX_STANDARD 14)

add_executable(2020_7_22 main.cpp)
add_executable(A A.cpp)
add_executable(B B.cpp)
add_executable(C C.cpp)
add_executable(B-zyy B-zyy.cpp)
add_executable(B-dm B-dm.cpp)
add_executable(P2387 P2387.cpp)
add_executable(dinic dinic.cpp)