cmake_minimum_required(VERSION 3.16)
project(2020_7_23)

set(CMAKE_CXX_STANDARD 14)

add_executable(2020_7_23 main.cpp)
add_executable(candy candy.cpp)
add_executable(carry carry.cpp)
add_executable(power power.cpp)
add_executable(P5090 P5090.cpp)
add_executable(dfz dfz.cpp)
add_executable(P4602 P4602.cpp)
add_executable(P2495 P2495.cpp)