cmake_minimum_required(VERSION 3.16)
project(2020_7_30)

set(CMAKE_CXX_STANDARD 14)

add_executable(2020_7_30 main.cpp)
add_executable(A A.cpp)
add_executable(B B.cpp)
add_executable(C C.cpp)
add_executable(2708-7 2708-7.cpp)
add_executable(P2261 P2261.cpp)
add_executable(2708-3 2708-3.cpp)
add_executable(P4768 P4768.cpp)
add_executable(P2303 P2303.cpp)