cmake_minimum_required(VERSION 3.16)
project(2020_7_31)

set(CMAKE_CXX_STANDARD 14)

add_executable(2020_7_31 main.cpp)
add_executable(2716-3 2716-3.cpp)
add_executable(P3224 P3224.cpp)
add_executable(2714-2 2714-2.cpp)
add_executable(P3973 P3973.cpp)
add_executable(P2168 P2168.cpp)
add_executable(P5043 P5043.cpp)