cmake_minimum_required(VERSION 3.16)
project(2020_8_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(2020_8_1 main.cpp)
add_executable(A A.cpp)
add_executable(B B.cpp)
add_executable(C C.cpp)
add_executable(B-dm B-dm.cpp)
add_executable(B-baoli B-baoli.cpp)
add_executable(CC CC.cpp)
add_executable(8991 8991.cpp)
add_executable(2720-13 2720-13.cpp)