cmake_minimum_required(VERSION 3.17)
project(2020_8_10)

set(CMAKE_CXX_STANDARD 20)

add_executable(2020_8_10 main.cpp)
add_executable(P3388 P3388.cpp)
add_executable(P3388-std P3388-std.cpp)
add_executable(P4432 P4432.cpp)
add_executable(2710-4 2710-4.cpp)
add_executable(2710-8 2710-8.cpp)
add_executable(P2801 P2801.cpp)
add_executable(2714-1 2714-1.cpp)