cmake_minimum_required(VERSION 3.17)
project(2020_8_11)

set(CMAKE_CXX_STANDARD 20)

add_executable(2020_8_11 main.cpp)
add_executable(A A.cpp)
add_executable(A-dm A-dm.cpp)
add_executable(B B.cpp)
add_executable(B-dm B-dm.cpp)
add_executable(C C.cpp)
add_executable(BB BB.cpp)
add_executable(2710-1 2710-1.cpp)