cmake_minimum_required(VERSION 3.17)
project(2020_8_2)

set(CMAKE_CXX_STANDARD 20)

add_executable(2020_8_2 main.cpp)
add_executable(P3857 P3857.cpp)
add_executable(P4859 P4859.cpp)
add_executable(A A.cpp)
add_executable(B B.cpp)
add_executable(C C.cpp)
add_executable(D D.cpp)
add_executable(E E.cpp)